--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,14 @@
 h2 {
   text-align: center;
 }
+
+h3 {
+  display: inline;
+  text-align: center;
+  margin: 5px 15px;
+}
+
+.scoresHolder {
+  text-align: center;
+  margin: 0 auto;
+}
