--- a/src/components/tiles/tile.css
+++ b/src/components/tiles/tile.css
@@ -10,6 +10,11 @@
   background-color: #C0FFEE;
 }
 
+.tile:hover {
+  box-shadow: inset 3px 3px 6px rgba(0, 0, 0, 0.3);
+  background-color: #abef98;
+}
+
 .img-container {
   text-align: center;
 }
